<resources>
    <string name="app_name">My weather</string>
    <string name="textCity">NameCity</string>
    <string name="cityNameMoscow">Moscow</string>
    <string name="textTempCurrent">textTempCurrent</string>
    <string name="textNow">Now</string>
    <string name="textPlusOneHour">TextView</string>
    <string name="textPlusThreeHours">TextView</string>
    <string name="textPlusTwoHours">TextView</string>
    <string name="textTempNow">TextView</string>
    <string name="textTempPlusOneHour">TextView</string>
    <string name="textTempPlusTwoHours">TextView</string>
    <string name="textTempPlusThreeHours">TextView</string>
    <string name="textCurrentDayPlusOne">TextView</string>
    <string name="textCurrentDayPlusTwo">TextView</string>
    <string name="textCurrentDayPlusThree">TextView</string>
    <string name="textTempCurrentDayPlusOne">TextView</string>
    <string name="textTempCurrentDayPlusOneNight">TextView</string>
    <string name="textTempCurrentDayPlusTwo">TextView</string>
    <string name="textTempCurrentDayPlusTwoNight">TextView</string>
    <string name="textTempCurrentDayPlusThree">TextView</string>
    <string name="textTempCurrentDayPlusThreeNight">TextView</string>
    <string name="textWindNow">textWindNow</string>
    <string name="textWindPlusOneHour">TextView</string>
    <string name="textWindPlusTwoHours">TextView</string>
    <string name="textWindPlusThreeHours">TextView</string>
    <string name="textPressureNow">textPressureNow</string>
    <string name="textPressurePlusOneHour">TextView</string>
    <string name="textPressurePlusTwoHours">TextView</string>
    <string name="textPressurePlusThreeHours">TextView</string>
    <string name="textChooseCity">Choose city</string>
    <string name="checkbox_set_visible_wind">Display wind speed</string>
    <string name="checkbox_set_visible_pressure">Display atmospheric pressure</string>
    <string name="textUnitWind">m/s,</string>
    <string name="textUnitWindS">S</string>
    <string name="textUnitWindN">N</string>
    <string name="textUnitWindW">W</string>
    <string name="textUnitWindE">E</string>
    <string name="textUnitWindSW">SW</string>
    <string name="textUnitWindSE">SE</string>
    <string name="textUnitWindNW">NW</string>
    <string name="textUnitWindNE">NE</string>
    <string name="textUnitPressureNow">mm rt. st.</string>
    <string name="textNull"> </string>
    <string name="hint_choose_city">City</string>
    <string name="switch_type_degree">Temperature (C/F)</string>
    <string name="celsius">C</string>
    <string name="fahrenheit">F</string>
    <string name="units">Units</string>
    <string name="todo">Image with type weather</string>
    <string name="text_count_hours_between_forecasts">Count of hours between forecasts: </string>
    <string name="value_count_hours_between_forecasts">TextView</string>
    <string name="todoImageWithBack">Image Back</string>
    <string name="todoImageWithOk">Image OK</string>
    <string name="weather_from_yandex">Weather From Yandex</string>
    <string name="itemTextInRV">Item text</string>
    <string name="choose_city">Сhoose city</string>
    <string name="ok_button">OK</string>
    <string name="new_city">New city</string>
    <string name="check_cityname">Wrong city name</string>
    <string name="city_name">City name</string>
    <string name="add_new_city_snackbar">Add</string>
    <string name="add_city_msg">Add city</string>
    <string name="choose_city_snackbar">Сhoose city</string>
    <string name="dark_theme">Dark theme</string>
    <string name="developers">Developers</string>
    <string name="about_textview">My weather</string>
    <string name="version_textview">Version 0.1</string>
    <string name="developer_textview">Zareckii Stanislav</string>
    <string name="сity_not_found">City not found</string>
    <string name="fail_connection">Fail connection</string>
</resources>

